<resources>
    <string name="app_name">Mezun App</string>
    <string name="password">Şifre</string>
    <string name="email">E-Posta</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="invaild_email">Geçersiz E-Posta</string>
    <string name="register_question">Henüz bir hesabın yok mu?</string>
    <string name="name">Ad</string>
    <string name="lastname">Soyad</string>
    <string name="start_year">Okula Giriş Yılı</string>
    <string name="end_year">Mezuniyet Yılı</string>
    <string name="add_photo">Fotoğraf Ekle</string>
    <string name="wrong_email_pw">E-Posta veya Şifre yanlış</string>
    <string name="profile">Profil</string>
    <string name="users">Kullanıcılar</string>
    <string name="announcements">Duyurular</string>
    <string name="mainpage">Anasayfa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
    <string name="edit_profile">Profili Düzenle</string>
    <string name="change_password">Şifre değiştir</string>
    <string name="send">Gönder</string>
    <string name="cancel">İptal</string>
    <string name="email_sent">E-Posta Gönderildi</string>
    <string name="email_cnt_sent">E-Posta Gönderilemedi</string>
    <string name="please_fill">Lütfen tüm alanları doldurun</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="profile_picture">Profil Fotoğrafı</string>
    <string name="no_apps">Bu işlem için uygulama bulunamadı</string>
    <string name="register_unsuccess">Kayıt İşlemi Başarısız</string>
    <string name="save_success">Kayıt işlemi başarılı</string>
    <string name="save_unsuccess">Kaydedilemedi</string>
    <string name="delete_media">Gönderiyi Sil</string>
    <string name="are_u_sure_delete_media">Bu Gönderiyi silmek istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="delete_success">Başarıyla Silindi</string>
    <string name="delete_unsuccess">Silme İşlemi Başarısız!</string>
    <string name="create_media">Gönderi Oluştur</string>
    <string name="delete_post">Duyuru Sil</string>
    <string name="are_u_sure_delete_post">Bu duyuruyu silmek istediğinize emin misiniz?</string>
    <string name="add_post">Duyuru Ekle</string>
    <string name="send_success">Başarıyla Gönderildi</string>
    <string name="send_unsuccess">Gönderilemedi</string>
    <string name="add_new_post">Yeni Duyuru Ekle</string>
    <string name="post_">Duyuru...</string>
    <string name="pick_date">Duyuru son tarihini seçin:</string>
    <string name="add_media">Fotoğraf/Video Ekle</string>
    <string name="add_ormedia">Fotoğraf veya Video Ekleyin</string>
    <string name="title">Başlık</string>
    <string name="pick_filter">Filtre seç</string>
    <string name="filter">Filtrele</string>
    <string name="pickfilter">Bir filtre seçiniz</string>
    <string name="country">Ülke</string>
    <string name="city">Şehir</string>
    <string name="startyear">Giriş Yılı</string>
    <string name="endyear">Mezun Yılı</string>
    <string name="education">Eğitim Durumu</string>
    <string name="firm">Firma</string>
    <string name="job">Meslek</string>
    <string name="social_media">Sosyal Medya</string>
    <string name="tel">Telefon</string>
    <string name="save">Kaydet</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="Change">Değiştir</string>
    <string name="recover_pw_success">Şifre Başarıyla Değiştirildi</string>
    <string name="user_info">Kullanıcı Bilgileri</string>
    <string name="sending_media">İçerik Gönderiliyor...</string>
    <string name="please_pick_media">Lütfen bir fotoğraf veya video seçin</string>
    <string name="email_change_success">E-Posta Başarıyla değiştirildi</string>
    <string name="email_change_unsuccess">E-Posta Değiştirilemedi</string>
    <string name="password_minimum_char">Şifeniz en az 6 karakterden oluşmalıdır!</string>
    <string name="saving">Kaydediliyor</string>
    <string name="loging">Giriş Yapılıyor</string>
</resources>