<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddAnnouncementActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/purple_700"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/add_new_post"/>


   <EditText
       android:id="@+id/et_post"
       android:padding="15dp"
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:layout_marginTop="25dp"
       android:background="@drawable/edit_text_shape"
       android:hint="@string/post_"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/pick_date"/>

    <Button
        android:id="@+id/datePickerButton"
        android:layout_marginVertical="10dp"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="10dp"
        android:onClick="openDatePicker"/>

    <Button
        android:id="@+id/btn_sendpost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

</LinearLayout>