<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddMediaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/purple_700"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/add_media"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_shape">

        <VideoView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:background="@color/transparent"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:id="@+id/vid_media"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:id="@+id/img_media"/>
        <TextView
            android:id="@+id/tv_addmedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/add_ormedia"/>
    </FrameLayout>

    <EditText
        android:id="@+id/et_title"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/title"/>

    <Button
        android:id="@+id/btn_sendmedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"/>
</LinearLayout>