<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:padding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="70dp">

                <ImageView
                    android:id="@+id/img_edit_addPhoto"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_a_photo" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_edit_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="text"/>

        </LinearLayout>
    </LinearLayout>







   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="10dp">
       <EditText
           android:id="@+id/et_edit_starty"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/start_year"
           android:layout_weight="1"
           android:inputType="number"/>

       <EditText
           android:id="@+id/et_edit_endy"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/end_year"
           android:layout_weight="1"
           android:inputType="number" />
   </LinearLayout>

    <EditText
        android:id="@+id/et_edit_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Eğitim Durumu"
        android:inputType="text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_edit_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Ülke"
            android:layout_weight="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_edit_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Şehir"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_edit_firm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Firma"
        android:inputType="text" />
    <EditText
        android:id="@+id/et_edit_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Meslek"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_edit_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Sosyal Medya" />

    <EditText
        android:id="@+id/et_edit_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Telefon"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />




    <Button
        android:id="@+id/btn_save"
        android:text="Kaydet"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>